--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -3,7 +3,7 @@
   <div class="whole-search">
     <div class="search">
       <form class="search-form">
-        <a href="/view-establishment.hbs" class="home-link"><i
+        <a href="#" class="home-link"><i
             class="fas fa-home"
             id="home-icon"
           ></i></a>
@@ -14,5 +14,9 @@
   </div>
   <div class="top-profile" id="top-profile">
     <img src="./images/profile-pic.jpg" alt="profile-pic" id="profile-pic" />
+    <div id="options" class="options">
+      <button onclick="showSignup()" id="go-profile">Sign Up</button>
+      <button onclick="showLogIn()" id="logout">Log-in</button>
+    </div>
   </div>
 </header>
