--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -9,11 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Outfit"
       rel="stylesheet"
     />
-    <script src="script.js"></script>
+    <script type="text/javascript" src="./hp-script.js"></script>
     <title>{{title}}</title>
   </head>
 <body>
     {{{body}}}
-    
 </body>
 </html>
