--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -1,4 +1,4 @@
-{{> header-homepage}}
+{{> header}}
 <div class="banner-container">
     <img src="/images/egi_lobby.jpeg" alt="None">
     <div class="catchline-container">
