--- a/public/establishment.css
+++ b/public/establishment.css
@@ -12,22 +12,24 @@ body {
 #eggy-logo {
   width: 11%;
   padding-left: 20px;
-} 
+}
 
 .whole {
   background-image: url();
   display: flex;
 }
 .sort-options {
-  display: block;
+  position: fixed; /* Set the position to fixed */
+  left: 0; /* Fix the position to the left */
+  width: 250px; /* Set a fixed width */
   margin-top: 9%;
   padding-left: 1%;
-  border: 2px solid #0c382b; /* Added solid border */
+  border: 2px solid #0c382b;
   margin-left: 2%;
-  width: 65%;
   height: 50vh;
   font-family: "Outfit";
 }
+
 .checked {
   color: orange;
 }
@@ -204,6 +206,11 @@ a:hover {
 a:active {
   text-decoration: none;
   color: black;
+}
+.main-list {
+  position: fixed;
+  right: 0;
+  width: 1200px;
 }
 .restos {
   border: 2px solid #ffa800; /* Added solid border */
